--- a/presentations/slides/css/theme/moon2.css
+++ b/presentations/slides/css/theme/moon2.css
@@ -50,7 +50,7 @@ body {
   font-weight: normal;
   line-height: 1.2;
   letter-spacing: normal;
-  text-transform: uppercase;
+  /*text-transform: uppercase;*/
   text-shadow: none;
   word-wrap: break-word; }
 
