--- a/_layouts/presentations.html
+++ b/_layouts/presentations.html
@@ -1,7 +1,7 @@
 ---
 layout: post
 ---
-<h1>{{ page.title }}</h1>
-<h2>{{ page.event }}</h2>
+<h1>at <i>{{ page.event }}</i></h1>
+<h2> {{ page.day }}</h2>
 
 {{ content }}
