--- a/_layouts/presentations.html
+++ b/_layouts/presentations.html
@@ -1,7 +1,44 @@
 ---
-layout: post
+layout: default
 ---
-<h1>at <i>{{ page.event }}</i></h1>
-<h2> {{ page.day }}</h2>
 
-{{ content }}
+<!-- Page Header -->
+{% if page.background %}
+<header class="masthead" style="background-image: url('{{ page.background | prepend: site.baseurl | replace: '//', '/' }}')">
+  {% else %}
+  <header class="masthead">
+    {% endif %}
+    <div class="overlay"></div>
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-8 col-md-10 mx-auto">
+          <div class="post-heading">
+            <h1>{{ page.title }}</h1>
+            {% if page.subtitle %}
+            <h2 class="subheading">{{ page.subtitle }}</h2>
+            {% endif %}
+          </div>
+        </div>
+      </div>
+    </div>
+  </header>
+
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-8 col-md-10 mx-auto">
+
+      	<h2>{{ page.date | date: "%Y %B %-d" }}   <i class="fa fa-cube" aria-hidden="true" style="margin: 0px 15px;"></i>  
+ 		<i>{{ page.event }}</i></h2>
+
+        {{ content }}
+
+        <a href="{{ page.link }}"><button name="button" class="btn btn-primary btn-lg" onclick="{{ page.link }}">Slides</button></a>
+        {% if page.pdf %}
+        	<a href="{{ page.pdf }}""><button name="button" class="btn btn-success btn-lg" onclick="{{ page.pdf }}">PDF</button></a>
+        {% endif %}
+
+
+
+      </div>
+    </div>
+  </div>
