--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -2,6 +2,8 @@
 layout: default
 ---
 
+<link rel="stylesheet" href="/assets/css/home.css">
+
 <!-- Page Header -->
 {% if page.background %}
 <header class="masthead" style="background-image: url('{{ page.background | prepend: site.baseurl | replace: '//', '/' }}')">
@@ -22,44 +24,3 @@ layout: default
       </div>
     </div>
   </header>
-
-  <div class="container">
-    <div class="row">
-      <div class="col-lg-8 col-md-10 mx-auto">
-
-        {{ content }}
-
-        <!-- Home Post List -->
-        {% for post in site.posts limit : 5 %}
-
-        <article class="post-preview">
-          <a href="{{ post.url | prepend: site.baseurl | replace: '//', '/' }}">
-            <h2 class="post-title">{{ post.title }}</h2>
-            {% if post.journal %}
-            <h3 class="post-subtitle">in <i>{{ post.journal }}</i></h3>
-            {% else %}
-            {% endif %}
-            {% if post.abstract %}
-            <h5 class="post-subtitle">{{ post.abstract | strip_html | truncatewords: 25 }}</h5>
-            {% else %}
-            <h5 class="post-subtitle">{{ post.excerpt | strip_html | truncatewords: 25 }}</h5>
-            {% endif %}
-          </a>
-          <p class="post-meta">
-            {% if post.author %}Written by {{ post.author }} &middot; {% else %}{% endif %}
-              {{ post.date | date: '%Y %B' }}
-          </p>
-        </article>
-
-        <hr>
-
-        {% endfor %}
-
-        <!-- Pager -->
-        <div class="clearfix">
-          <a class="btn btn-primary float-right" href="{{"/posts" | relative_url }}">View All Posts &rarr;</a>
-        </div>
-
-      </div>
-    </div>
-  </div>
