--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -17,7 +17,9 @@ layout: default
           <div class="post-heading">
             <h1>{{ page.title }}</h1>
             {% if page.journal %}
-            <i><h2 class="subheading">{{ page.journal }}</h2></i>
+              <i><h2 class="subheading">{{ page.journal }}</h2></i>
+            {% elsif page.subtitle %}
+              <i><h2 class="subheading">{{ page.subtitle }}</h2></i>
             {% endif %}
             <span class="meta">
               {% if page.author %}Written by {{ page.author }} &middot; {% else %}{% endif %}
